[gd_scene load_steps=139 format=2]

[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=1]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material.gd" type="Script" id=2]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=3]
[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=4]
[ext_resource path="res://addons/rmsmartshape/normal_range.gd" type="Script" id=5]
[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=6]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material_metadata.gd" type="Script" id=7]
[ext_resource path="res://addons/rmsmartshape/shapes/shape_closed.gd" type="Script" id=8]
[ext_resource path="res://scenes/common/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/terrain/castle_top_right.png" type="Texture" id=10]
[ext_resource path="res://assets/terrain/castle_top_center.png" type="Texture" id=11]
[ext_resource path="res://assets/music/Its Raining Pixels.mp3" type="AudioStream" id=12]
[ext_resource path="res://addons/mixing-desk/music/mixing_desk_music.gd" type="Script" id=13]
[ext_resource path="res://addons/mixing-desk/music/song.gd" type="Script" id=14]
[ext_resource path="res://addons/mixing-desk/music/containers/core_cont.gd" type="Script" id=15]
[ext_resource path="res://scenes/levels/baselevel.gd" type="Script" id=16]
[ext_resource path="res://assets/terrain/castle_allaround.png" type="Texture" id=17]
[ext_resource path="res://assets/GameDevAssets/platformerGraphicsDeluxe_Updated/Tiles/liquidLava.png" type="Texture" id=18]
[ext_resource path="res://assets/GameDevAssets/platformerGraphicsDeluxe_Updated/bg.png" type="Texture" id=19]
[ext_resource path="res://assets/terrain/castle_gray_fill.png" type="Texture" id=20]
[ext_resource path="res://assets/GameDevAssets/door.png" type="Texture" id=21]
[ext_resource path="res://assets/terrain/castle_top_left.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.102, 34.5637 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.9059, 34.1785 )

[sub_resource type="Resource" id=3]
script = ExtResource( 2 )
textures = [ ExtResource( 17 ) ]
texture_normals = [  ]
textures_corner_outer = [  ]
textures_corner_inner = [  ]
texture_normals_corner_outer = [  ]
texture_normals_corner_inner = [  ]
textures_taper_left = [  ]
textures_taper_right = [  ]
texture_normals_taper_left = [  ]
texture_normals_taper_right = [  ]
use_corner_texture = true
use_taper_texture = true

[sub_resource type="Resource" id=4]
script = ExtResource( 5 )
begin = 0.0
end = 0.0

[sub_resource type="Resource" id=5]
script = ExtResource( 7 )
edge_material = SubResource( 3 )
normal_range = SubResource( 4 )
weld = true
render = true
z_index = 0
offset = 0.0

[sub_resource type="Resource" id=6]
script = ExtResource( 2 )
textures = [ ExtResource( 11 ) ]
texture_normals = [  ]
textures_corner_outer = [  ]
textures_corner_inner = [  ]
texture_normals_corner_outer = [  ]
texture_normals_corner_inner = [  ]
textures_taper_left = [ ExtResource( 22 ) ]
textures_taper_right = [ ExtResource( 10 ) ]
texture_normals_taper_left = [  ]
texture_normals_taper_right = [  ]
use_corner_texture = true
use_taper_texture = true

[sub_resource type="Resource" id=7]
script = ExtResource( 5 )
begin = 45.0
end = 135.0

[sub_resource type="Resource" id=8]
script = ExtResource( 7 )
edge_material = SubResource( 6 )
normal_range = SubResource( 7 )
weld = true
render = true
z_index = 0
offset = 0.0

[sub_resource type="Resource" id=9]
script = ExtResource( 1 )
_edge_meta_materials = [ SubResource( 5 ), SubResource( 8 ) ]
fill_textures = [ ExtResource( 20 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="Resource" id=10]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=11]
script = ExtResource( 6 )
position = Vector2( -46.8967, 16.9985 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 10 )

[sub_resource type="Resource" id=12]
script = ExtResource( 3 )
texture_idx = 3
flip = false
width = 1.0

[sub_resource type="Resource" id=13]
script = ExtResource( 6 )
position = Vector2( 280.003, 14.9744 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 12 )

[sub_resource type="Resource" id=14]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=15]
script = ExtResource( 6 )
position = Vector2( -46.8967, 16.9985 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 14 )

[sub_resource type="Resource" id=16]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=17]
script = ExtResource( 6 )
position = Vector2( -47.0354, -784.313 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 16 )

[sub_resource type="Resource" id=18]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=19]
script = ExtResource( 6 )
position = Vector2( 279.299, -166.636 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 18 )

[sub_resource type="Resource" id=20]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=21]
script = ExtResource( 6 )
position = Vector2( 331.862, -171.981 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 20 )

[sub_resource type="Resource" id=22]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=23]
script = ExtResource( 6 )
position = Vector2( 343.434, -788.846 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 22 )

[sub_resource type="Resource" id=24]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=25]
script = ExtResource( 6 )
position = Vector2( -45.8793, -0.0379639 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 24 )

[sub_resource type="Resource" id=26]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=27]
script = ExtResource( 6 )
position = Vector2( 368.792, -390.713 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 26 )

[sub_resource type="Resource" id=28]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=29]
script = ExtResource( 6 )
position = Vector2( 367.458, -513.519 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 28 )

[sub_resource type="Resource" id=30]
script = ExtResource( 4 )
_points = {
22: SubResource( 11 ),
23: SubResource( 13 ),
28: SubResource( 15 ),
29: SubResource( 17 ),
30: SubResource( 19 ),
31: SubResource( 21 ),
32: SubResource( 23 ),
33: SubResource( 25 ),
34: SubResource( 27 ),
35: SubResource( 29 )
}
_point_order = [ 28, 33, 29, 32, 35, 34, 31, 30, 23, 22 ]
_constraints = {
[ 22, 28 ]: 15
}
_next_key = 36

[sub_resource type="Resource" id=31]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=32]
script = ExtResource( 6 )
position = Vector2( -221.465, 40.8255 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 31 )

[sub_resource type="Resource" id=33]
script = ExtResource( 3 )
texture_idx = -5
flip = false
width = 1.0

[sub_resource type="Resource" id=34]
script = ExtResource( 6 )
position = Vector2( 155.971, 806.798 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 33 )

[sub_resource type="Resource" id=35]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=36]
script = ExtResource( 6 )
position = Vector2( 360.61, 8.32126 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 35 )

[sub_resource type="Resource" id=37]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=38]
script = ExtResource( 6 )
position = Vector2( -221.465, 40.8255 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 37 )

[sub_resource type="Resource" id=39]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=40]
script = ExtResource( 6 )
position = Vector2( 11.4186, 801.682 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 39 )

[sub_resource type="Resource" id=41]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=42]
script = ExtResource( 6 )
position = Vector2( 23.2579, 114.523 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 41 )

[sub_resource type="Resource" id=43]
script = ExtResource( 3 )
texture_idx = 3
flip = false
width = 1.0

[sub_resource type="Resource" id=44]
script = ExtResource( 6 )
position = Vector2( 168.404, 110.285 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 43 )

[sub_resource type="Resource" id=45]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=46]
script = ExtResource( 6 )
position = Vector2( -229.113, -93.4252 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 45 )

[sub_resource type="Resource" id=47]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=48]
script = ExtResource( 6 )
position = Vector2( -201.104, -94.1175 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 47 )

[sub_resource type="Resource" id=49]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=50]
script = ExtResource( 6 )
position = Vector2( 359, -17 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 49 )

[sub_resource type="Resource" id=51]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=52]
script = ExtResource( 6 )
position = Vector2( 337, 3 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 51 )

[sub_resource type="Resource" id=53]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=54]
script = ExtResource( 6 )
position = Vector2( -159.919, -3.55231 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 53 )

[sub_resource type="Resource" id=55]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=56]
script = ExtResource( 6 )
position = Vector2( -198.63, -7.55682 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 55 )

[sub_resource type="Resource" id=57]
script = ExtResource( 4 )
_points = {
5: SubResource( 32 ),
17: SubResource( 34 ),
18: SubResource( 36 ),
20: SubResource( 38 ),
21: SubResource( 40 ),
22: SubResource( 42 ),
23: SubResource( 44 ),
24: SubResource( 46 ),
25: SubResource( 48 ),
26: SubResource( 50 ),
27: SubResource( 52 ),
28: SubResource( 54 ),
29: SubResource( 56 )
}
_point_order = [ 5, 24, 25, 29, 28, 27, 26, 18, 23, 17, 21, 22, 20 ]
_constraints = {
[ 5, 20 ]: 15
}
_next_key = 30

[sub_resource type="Resource" id=58]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=59]
script = ExtResource( 6 )
position = Vector2( 375.475, -491.267 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 58 )

[sub_resource type="Resource" id=60]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=61]
script = ExtResource( 6 )
position = Vector2( 375.243, -599.606 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 60 )

[sub_resource type="Resource" id=62]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=63]
script = ExtResource( 6 )
position = Vector2( 87.369, -491.709 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 62 )

[sub_resource type="Resource" id=64]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=65]
script = ExtResource( 6 )
position = Vector2( 375.243, -599.606 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 64 )

[sub_resource type="Resource" id=66]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=67]
script = ExtResource( 6 )
position = Vector2( 89, -536 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 66 )

[sub_resource type="Resource" id=68]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=69]
script = ExtResource( 6 )
position = Vector2( 162, -538 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 68 )

[sub_resource type="Resource" id=70]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=71]
script = ExtResource( 6 )
position = Vector2( 166, -600 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 70 )

[sub_resource type="Resource" id=72]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=73]
script = ExtResource( 6 )
position = Vector2( 371.665, -1163.12 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 72 )

[sub_resource type="Resource" id=74]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=75]
script = ExtResource( 6 )
position = Vector2( 321, -600 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 74 )

[sub_resource type="Resource" id=76]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=77]
script = ExtResource( 6 )
position = Vector2( -53.0045, -1169.44 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 76 )

[sub_resource type="Resource" id=78]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=79]
script = ExtResource( 6 )
position = Vector2( -49, -732 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 78 )

[sub_resource type="Resource" id=80]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=81]
script = ExtResource( 6 )
position = Vector2( 322, -735 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 80 )

[sub_resource type="Resource" id=82]
script = ExtResource( 4 )
_points = {
38: SubResource( 59 ),
43: SubResource( 61 ),
45: SubResource( 63 ),
52: SubResource( 65 ),
53: SubResource( 67 ),
54: SubResource( 69 ),
56: SubResource( 71 ),
58: SubResource( 73 ),
60: SubResource( 75 ),
61: SubResource( 77 ),
62: SubResource( 79 ),
63: SubResource( 81 )
}
_point_order = [ 43, 38, 45, 53, 54, 56, 60, 63, 62, 61, 58, 52 ]
_constraints = {
[ 43, 52 ]: 15
}
_next_key = 64

[sub_resource type="Resource" id=83]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=84]
script = ExtResource( 6 )
position = Vector2( 235.475, -261.267 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 83 )

[sub_resource type="Resource" id=85]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=86]
script = ExtResource( 6 )
position = Vector2( 237.103, -396.914 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 85 )

[sub_resource type="Resource" id=87]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=88]
script = ExtResource( 6 )
position = Vector2( -45.757, -256.606 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 87 )

[sub_resource type="Resource" id=89]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=90]
script = ExtResource( 6 )
position = Vector2( 9.36902, -530.709 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 89 )

[sub_resource type="Resource" id=91]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=92]
script = ExtResource( 6 )
position = Vector2( 8.94147, -406.432 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 91 )

[sub_resource type="Resource" id=93]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=94]
script = ExtResource( 6 )
position = Vector2( -49.7299, -532.011 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 93 )

[sub_resource type="Resource" id=95]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=96]
script = ExtResource( 6 )
position = Vector2( -49.7299, -532.011 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 95 )

[sub_resource type="Resource" id=97]
script = ExtResource( 4 )
_points = {
38: SubResource( 84 ),
42: SubResource( 86 ),
43: SubResource( 88 ),
45: SubResource( 90 ),
46: SubResource( 92 ),
47: SubResource( 94 ),
48: SubResource( 96 )
}
_point_order = [ 47, 45, 46, 42, 38, 43, 48 ]
_constraints = {
[ 47, 48 ]: 15
}
_next_key = 49

[sub_resource type="Resource" id=98]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=99]
script = ExtResource( 6 )
position = Vector2( -49.7283, -159.506 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 98 )

[sub_resource type="Resource" id=100]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=101]
script = ExtResource( 6 )
position = Vector2( -49.7283, -159.506 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 100 )

[sub_resource type="Resource" id=102]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=103]
script = ExtResource( 6 )
position = Vector2( -46.8433, -125.272 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 102 )

[sub_resource type="Resource" id=104]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=105]
script = ExtResource( 6 )
position = Vector2( 80.5374, -162.909 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 104 )

[sub_resource type="Resource" id=106]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=107]
script = ExtResource( 6 )
position = Vector2( 135.196, -162.909 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 106 )

[sub_resource type="Resource" id=108]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=109]
script = ExtResource( 6 )
position = Vector2( 329.825, -394.243 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 108 )

[sub_resource type="Resource" id=110]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=111]
script = ExtResource( 6 )
position = Vector2( 379.897, -136 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 110 )

[sub_resource type="Resource" id=112]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=113]
script = ExtResource( 6 )
position = Vector2( 324.735, -173.763 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 112 )

[sub_resource type="Resource" id=114]
script = ExtResource( 3 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=115]
script = ExtResource( 6 )
position = Vector2( 370.17, -392.033 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 114 )

[sub_resource type="Resource" id=116]
script = ExtResource( 4 )
_points = {
22: SubResource( 99 ),
28: SubResource( 101 ),
29: SubResource( 103 ),
30: SubResource( 105 ),
31: SubResource( 107 ),
35: SubResource( 109 ),
36: SubResource( 111 ),
37: SubResource( 113 ),
38: SubResource( 115 )
}
_point_order = [ 22, 30, 31, 37, 35, 38, 36, 29, 28 ]
_constraints = {
[ 22, 28 ]: 15
}
_next_key = 39

[node name="Level" type="Node2D"]
script = ExtResource( 16 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 101.547, -13.1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_lock_": true
}

[node name="MusicBox" type="Node" parent="."]
script = ExtResource( 13 )
play_mode = 4
autoplay = true
autoplay_song = NodePath("Song/CoreContainer/AudioStreamPlayer")

[node name="Song" type="Node" parent="MusicBox"]
script = ExtResource( 14 )
tempo = 120
bars = 12
beats_in_bar = 4

[node name="CoreContainer" type="Node" parent="MusicBox/Song"]
script = ExtResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MusicBox/Song/CoreContainer"]
stream = ExtResource( 12 )
volume_db = -80.0

[node name="Exit" type="Sprite" parent="."]
position = Vector2( 271.162, -635.803 )
z_index = -4
texture = ExtResource( 21 )

[node name="Area2D" type="Area2D" parent="Exit"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit/Area2D"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lava" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 63.3204, 510.166 )
scale = Vector2( 91.0013, 3.81305 )
z_index = -5
texture = ExtResource( 18 )

[node name="DeathArea2D" type="Area2D" parent="Lava"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava/DeathArea2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fade" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 245.131, -212.335 )
scale = Vector2( 18.3571, 13.163 )
z_index = 10
texture = ExtResource( 19 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.843137, 0.709804, 0.858824, 1 )
position = Vector2( -62.5031, 625.393 )
scale = Vector2( 30.0481, 17.0199 )
z_index = -10
texture = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="CastleBg" type="Node2D" parent="."]
modulate = Color( 0.623529, 0.607843, 0.607843, 1 )
z_index = -5
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
collision_polygon_node_path = NodePath("../CollisionPolygon2D")
shape_material = SubResource( 9 )
_points = SubResource( 30 )
material_overrides = {
}

[node name="entrance" type="Sprite" parent="."]
position = Vector2( 110.324, -51.5905 )
z_index = -4
texture = ExtResource( 21 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Castle1" type="Node2D" parent="StaticBody2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
collision_polygon_node_path = NodePath("../CollisionPolygon2D")
shape_material = SubResource( 9 )
_points = SubResource( 57 )
material_overrides = {
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( -222.914, 41.9677, -232.694, -96.7253, -198.331, -97.0425, -196.274, -9.74349, -159.958, -2.88167, 336.667, 2.12023, 362.334, -25.2332, 361.738, 8.95163, 169.756, 111.115, 158.965, 809.956, 8.54206, 804.411, 21.1959, 116.028 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="Castle4" type="Node2D" parent="StaticBody2D2"]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
collision_polygon_node_path = NodePath("../CollisionPolygon2D")
shape_material = SubResource( 9 )
_points = SubResource( 82 )
material_overrides = {
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( 373.869, -599.6, 378.804, -487.94, 84.2847, -488.741, 86.4234, -538.601, 159.597, -540.494, 163.524, -602.641, 318.239, -602.782, 319.17, -732.168, -51.7382, -729.214, -55.8505, -1172.3, 374.366, -1165.8 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="Castle3" type="Node2D" parent="StaticBody2D3"]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
collision_polygon_node_path = NodePath("../CollisionPolygon2D")
shape_material = SubResource( 9 )
_points = SubResource( 97 )
material_overrides = {
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( -52.2062, -534.506, 12.6497, -533.907, 11.7517, -409.118, 239.864, -399.531, 238.174, -258.58, -48.5032, -253.773 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="Castle2" type="Node2D" parent="StaticBody2D4"]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
collision_polygon_node_path = NodePath("../CollisionPolygon2D")
shape_material = SubResource( 9 )
_points = SubResource( 116 )
material_overrides = {
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D4"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( -52.9125, -162.357, 80.5374, -162.91, 135.196, -162.915, 321.686, -176.71, 326.893, -397.412, 372.716, -394.537, 382.871, -133.208, -49.2344, -122.604 )

[connection signal="beat" from="MusicBox" to="Player" method="_on_MixingDeskMusic_beat"]
[connection signal="body_entered" from="Exit/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Lava/DeathArea2D" to="." method="_on_DeathArea2D_body_entered"]
